--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="#">
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
     {% block extra_css %}{% endblock %}
 </head>
