--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -16,7 +16,7 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block inner_content %}
-    <div class="row container-fluid">
+    <div class="row login-container container-fluid">
         <div class="col-md-6 left-content">
             <h1 class="logo-font mb-3">{% trans "Sign In" %}</h1>
             <hr />
@@ -48,7 +48,7 @@
         </div>
 
         <div class="col-md-6 outer-form right-content">
-            <form class="form" method="POST" action="{% url 'account_login' %}">
+            <form id="login_form" class="form" method="POST" action="{% url 'account_login' %}">
               {% csrf_token %}
               {{ form|crispy }}
               {% if redirect_field_value %}
