--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -13,7 +13,7 @@
 
 {% block inner_content %}
 <div class="container-fluid">
-    <div class="row form justify-content-center">
+    <div id="signout_form" class="row form justify-content-center">
             <div class="logouter-form">
                 <h2 class="logo-font signout mt-5 mb-5 text-center">{% trans "Sign Out" %}</h2>
                 <hr class="mt-3 mb-4" style="border: 1px solid white;" />
