Added lorem ipsum/ fake shows into db for visual, and alphabet filtering function to shows page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -83,8 +83,8 @@
               <label>{% trans "Le prix" %}</label>
               <input type="range" class="custom-range" min="0" max="100" step="1">
               <div class="d-flex justify-content-between">
-                <span>€0</span>
-                <span>€100+</span>
+                <span>0</span>
+                <span>100+</span>
               </div>
             </div>
   
