--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,7 +44,7 @@ header {
   width: 100%;
   top: 0;
   z-index: 1000;
-  border-bottom: 3px solid rgba(237, 169, 204, 0.5);
+  box-shadow: 0 6px 6px -4px rgba(237, 169, 204, 0.5);
 }
 
 .nav-background {
@@ -64,7 +64,7 @@ header {
 }
 
 .logo-image {
-    max-height: 100px;
+    max-height: 80px;
     width: auto; /* Maintain aspect ratio */
 }
 
