--- a/static/css/shows.css
+++ b/static/css/shows.css
@@ -2,7 +2,7 @@
   margin-top: 9%;
 }
 
-.section-title {
+.page-title {
   font-family: 'Abril Fatface';
   font-style: normal;
   font-weight: 400;
@@ -11,11 +11,18 @@
   color: #F35C9B;
 }
 
+.line {
+    height: 2px;
+    background-color: #DF0962; /* or any color you'd like */
+    display: inline-block;
+    width: 390px;
+  }
+
 .section-title-h2 {
   font-family: 'Abril Fatface';
   font-style: normal;
   font-weight: 400;
-  font-size: 40px;
+  font-size: 34px;
   line-height: 54px;
   color: #9C0645;
 }
@@ -28,6 +35,25 @@
   line-height: 27px;
   color: #000000;
 }
+
+.section-title-h3 {
+  font-family: 'Abril Fatface';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 43px;
+  color: #9C0645;
+}
+
+.filter {
+  margin-bottom: 3%;
+}
+
+.form-group {
+  margin-right: 5%;
+}
+
+/* Show cards */
 
 .card {
   border: 1px solid #ddd;
@@ -66,30 +92,13 @@
   color: #555;
 }
 
-.btn-primary {
-  background-color: #b02e0c;
-  border-color: #b02e0c;
-  font-weight: 600;
-}
-
-.btn-primary:hover {
-  background-color: #8a2209;
-  border-color: #8a2209;
-}
-
-.btn-outline-primary {
-  color: #b02e0c;
-  border-color: #b02e0c;
-  font-weight: 600;
-}
-
-.btn-outline-primary:hover {
-  background-color: #b02e0c;
-  color: white;
-}
-
 @media (max-width: 576px) {
   .card-img-top {
     height: 150px;
   }
+}
+
+/* Want to join? Section */
+.in-shows {
+  background-color: #ffffff;
 }
