--- a/teams/templates/teams/teams_list.html
+++ b/teams/templates/teams/teams_list.html
@@ -18,15 +18,15 @@
 <!-- Top Section -->
 <section class="top">
   <div class="container">
-    <h1 class="page-title mb-2">Tous les shows burlesques</h1>
+    <h1 class="page-title mb-2">Toutes les troupes burlesques</h1>
       <h2 class="section-title-h2 mb-2 d-flex align-items-center">
-        Découvrez tous les shows burlesques du moment
+        Découvrez toutes les troupes burlesques et les performeurs
         <span class="divider-line ml-2 d-flex align-items-center">
           💠<span class="line flex-grow-1 ml-2"></span>
         </span>
       </h2>
       <p class="under_title mb-4">
-        Vous pouvez choisir la première lettre du spectacle qui vous intérèsse, sinon vous pouvez aussi filtrer grâce à la ville ou au prix.
+        Vous pouvez choisir la première lettre de la troupe qui vous intérèsse, sinon vous pouvez aussi filtrer grâce aux noms des performeurs
       </p>
     <div class="row abc mt-2 mb-4">
       <div class="col text-center">
@@ -127,7 +127,7 @@
 <section class="troops-section py-5">
   <div class="container">
       <h3 class="section-title mb-4 d-flex align-items-center">
-        Les troupes mises à l honneur
+        Ses prochains spectacles
         <span class="divider-line ml-2 d-flex align-items-center">
           💠<span class="line flex-grow-1 ml-2"></span>
         </span>
@@ -208,4 +208,3 @@
 </section>
 </div>
 {% endblock %}
-
