--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
                                         <a class="nav-link" href="{% url 'shows' %}">{% trans 'Les Shows' %}</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">{% trans 'Les Artistes' %}</a>
+                                        <a class="nav-link" href="{% url 'teams' %}">{% trans 'Les Artistes' %}</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="{% url 'home' %}#about">{% trans 'Les cours' %}</a>
@@ -117,7 +117,7 @@
                                         <a class="nav-link" href="{% url 'shows' %}">{% trans 'Les Shows' %}</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">{% trans 'Les Artistes' %}</a>
+                                        <a class="nav-link" href="{% url 'teams' %}">{% trans 'Les Artistes' %}</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="{% url 'home' %}#about">{% trans 'Les cours' %}</a>
@@ -271,7 +271,7 @@
             <div class="col-md-3 mb-3 mb-md-0">
                 <p>
                     <a href="{% url 'shows' %}" class="footer-link building-link">{% trans 'Les Shows' %}</a><br>
-                    <a href="{% url 'home' %}" class="footer-link location-link">{% trans 'Les Troupes' %}</a><br>
+                    <a href="{% url 'teams' %}" class="footer-link location-link">{% trans 'Les Troupes' %}</a><br>
                     <a href="{% url 'home' %}" class="footer-link location-link">{% trans 'Les Articles' %}</a><br>
                 </p>
             </div>
