--- a/teams/templates/teams/teams_list.html
+++ b/teams/templates/teams/teams_list.html
@@ -89,7 +89,7 @@
               <img src="{{ show.image.url }}" class="card-img-top" alt="{{ show.title }}">
             {% endif %}
             <div class="card-body d-flex flex-column text-center">
-              <h5 class="card-title">{{ show.title }}</h5>
+              <h5 class="card-title">{{ show.name }}</h5>
               <p class="card-text"><strong>{{ show.address }}</strong><br>{{ show.dates }}</p>
               <p class="card-text">{{ show.description|truncatewords:20 }}</p>
               <div class="mt-auto">
