--- a/shows/templates/shows/shows_list.html
+++ b/shows/templates/shows/shows_list.html
@@ -96,13 +96,13 @@
               {% if show.image %}
                 <img src="{{ show.image.url }}" class="card-img-top" alt="{{ show.title }}">
               {% endif %}
-              <div class="card-body d-flex flex-column text-center">
+              <div class="card-body d-flex flex-column">
                 <h5 class="card-title">{{ show.title }}</h5>
-                <p class="card-text"><strong>{{ show.address }}</strong><br>{{ show.dates }}</p>
+                <p class="card-text-address">{{ show.address }}<br><strong>{{ show.date }}</strong></p>
                 <p class="card-text">{{ show.description|truncatewords:20 }}</p>
                 <div class="mt-auto">
-                  <a href="#" class="btn btn-primary me-2">Réserver</a>
-                  <a href="#" class="btn btn-outline-primary">En savoir plus</a>
+                  <a href="#" class="btn reserve-btn btn-primary me-2">Réserver</a>
+                  <a href="#" class="btn more-btn btn-outline-primary mt-2">En savoir plus</a>
                 </div>
               </div>
             </div>
