--- a/static/css/home.css
+++ b/static/css/home.css
@@ -281,7 +281,99 @@ color: black;
     height: 100%;
     border: 0;
   }
-  
+
+  /* Show cards */
+
+.card {
+  border: transparent;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 8px rgba(176, 46, 12, 0.15);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background: white;
+}
+
+.card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 8px 16px rgba(156, 6, 69, 0.3);
+}
+
+.card-img-top {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  height: 180px;
+  object-fit: cover;
+}
+
+.card-title {
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  font-family: 'Abril Fatface';
+  font-size: 24px;
+  color: #000000;
+}
+
+.card-text-address {
+  font-family: 'Afacad';
+  font-size: 12px;
+  color: #9C0645;
+}
+
+.card-text-address strong {
+  font-size: 14px;
+} 
+
+.card-text {
+  font-family: 'Afacad';
+  font-size: 16px;
+  color: #000000;
+}
+
+@media (max-width: 576px) {
+  .card-img-top {
+    height: 150px;
+  }
+}
+
+.reserve-btn {
+  font-family: 'Akatab';
+  font-size: 18px;
+  text-align: center;
+  width: 185px;
+  color: #FFFFFF;
+  background: #DF0962;
+  border-radius: 10px;
+  text-shadow: 0px 1px 1px #9C0645;
+  border: transparent;
+}
+
+.reserve-btn:hover {
+  background: #FFFFFF;
+  border: 1px solid #DF0962;
+  color: #DF0962;
+  text-decoration: none;
+  box-shadow: 0px 1px 1px rgba(156, 6, 69, 0.3);
+}
+
+.more-btn {
+  font-family: 'Akatab';
+  font-size: 18px;
+  text-align: center;
+  width: 185px;
+  color: #9C0645;
+  background: rgba(255, 173, 204, 0.5);
+  border-radius: 10px;
+  text-shadow: 0px 1px 1px rgba(156, 6, 69, 0.3);
+  border: transparent;
+}
+
+.more-btn:hover {
+  background: #9C0645;
+  border: 1px solid rgba(255, 173, 204, 0.5);
+  color: white;
+  text-decoration: none;
+  box-shadow: 0px 1px 1px rgba(156, 6, 69, 0.3);
+}
+
   /* Troop Section */
 .troops-section,
 .join-section {
