--- a/teams/templates/teams/teams_list.html
+++ b/teams/templates/teams/teams_list.html
@@ -82,7 +82,7 @@
 </section>
 
 <!-- View Section -->
-<section class="show-views">
+<section class="team-views">
   <div class="container">
     <h3 class="section-title-h3 mb-4 d-flex align-items-center">
         Les résultats de votre recherche
@@ -92,19 +92,19 @@
       </h3>
     <div class="row">
       {% if page_obj %}
-        {% for show in page_obj %}
+        {% for team in page_obj %}
           <div class="col-12 col-sm-6 col-lg-3 mb-4">
             <div class="card h-100">
-              {% if show.image %}
-                <img src="{{ show.image.url }}" class="card-img-top" alt="{{ show.title }}">
+              {% if team.image %}
+                <img src="{{ team.image.url }}" class="card-img-top" alt="{{ team.title }}">
               {% endif %}
-              <div class="card-body d-flex flex-column text-center">
-                <h5 class="card-title">{{ show.name }}</h5>
-                <p class="card-text"><strong>{{ show.address }}</strong><br>{{ show.dates }}</p>
-                <p class="card-text">{{ show.description|truncatewords:20 }}</p>
-                <div class="mt-auto">
-                  <a href="#" class="btn btn-primary me-2">Réserver</a>
-                  <a href="#" class="btn btn-outline-primary">En savoir plus</a>
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">{{ team.name }}</h5>
+                <p class="card-text-address"><strong>{{ team.date }}</strong></p>
+                <p class="card-text">{{ team.description|truncatewords:20 }}</p>
+                <div class="mt-auto text-center">
+                  <a href="#" class="btn reserve-btn btn-primary me-2">Réserver</a>
+                  <a href="#" class="btn more-btn btn-outline-primary mt-2">En savoir plus</a>
                 </div>
               </div>
             </div>
