Started show carousel on Team details page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -43,9 +43,7 @@
     <div class="container">
       <h2 class="section-title-h2 mb-4 d-flex align-items-center">
         Quand souhaitez vous voir un spectacle ?
-        <span class="divider-line ml-2 d-flex align-items-center">
-          💠<span class="line flex-grow-1 ml-2"></span>
-        </span>
+        <span class="divider-line flex-grow-1 ml-3"></span>
       </h2>
       <div class="row">
         <!-- Left Form Column -->
@@ -131,9 +129,7 @@
   <div class="container">
     <h3 class="section-title mb-4 d-flex align-items-center">
       Les résultats de votre recherche
-      <span class="divider-line ml-2 d-flex align-items-center">
-        💠<span class="line flex-grow-1 ml-2"></span>
-      </span>
+      <span class="divider-line flex-grow-1 ml-3"></span>
     </h3>
 
     <div class="row">
@@ -174,9 +170,7 @@
   <div class="container">
       <h3 class="section-title mb-4 d-flex align-items-center">
         Les troupes mises à l honneur
-        <span class="divider-line ml-2 d-flex align-items-center">
-          💠<span class="line flex-grow-1 ml-2"></span>
-        </span>
+        <span class="divider-line flex-grow-1 ml-3"></span>
       </h3>
       <div class="row align-items-center">
       
