--- a/teams/templates/teams/teams_list.html
+++ b/teams/templates/teams/teams_list.html
@@ -21,9 +21,7 @@
     <h1 class="page-title mb-2">Toutes les troupes burlesques</h1>
       <h2 class="section-title-h2 mb-2 d-flex align-items-center">
         Découvrez toutes les troupes burlesques et les performeurs
-        <span class="divider-line ml-2 d-flex align-items-center">
-          💠<span class="line flex-grow-1 ml-2"></span>
-        </span>
+        <span class="divider-line flex-grow-1 ml-3"></span>
       </h2>
       <p class="under_title mb-4">
         Vous pouvez choisir la première lettre de la troupe qui vous intérèsse, sinon vous pouvez aussi filtrer grâce aux noms des performeurs
@@ -86,9 +84,7 @@
   <div class="container">
     <h3 class="section-title-h3 mb-4 d-flex align-items-center">
         Les résultats de votre recherche
-        <span class="divider-line ml-2 d-flex align-items-center">
-          💠<span class="line flex-grow-1 ml-2"></span>
-        </span>
+        <span class="divider-line flex-grow-1 ml-3"></span>
       </h3>
     <div class="row">
       {% if page_obj %}
@@ -143,9 +139,7 @@
   <div class="container">
       <h3 class="section-title mb-4 d-flex align-items-center">
         Ses prochains spectacles
-        <span class="divider-line ml-2 d-flex align-items-center">
-          💠<span class="line flex-grow-1 ml-2"></span>
-        </span>
+        <span class="divider-line flex-grow-1 ml-3"></span>
       </h3>
       <div class="row align-items-center">
       
