--- a/shows/templates/shows/shows_list.html
+++ b/shows/templates/shows/shows_list.html
@@ -21,9 +21,7 @@
     <h1 class="page-title mb-2">Tous les shows burlesques</h1>
       <h2 class="section-title-h2 mb-2 d-flex align-items-center">
         Découvrez tous les shows burlesques du moment
-        <span class="divider-line ml-2 d-flex align-items-center">
-          💠<span class="line flex-grow-1 ml-2"></span>
-        </span>
+        <span class="divider-line flex-grow-1 ml-3"></span>
       </h2>
       <p class="under_title mb-4">
         Vous pouvez choisir la première lettre du spectacle qui vous intérèsse, sinon vous pouvez aussi filtrer grâce à la ville ou au prix.
@@ -84,9 +82,7 @@
   <div class="container">
     <h3 class="section-title-h3 mb-4 d-flex align-items-center">
         Les résultats de votre recherche
-        <span class="divider-line ml-2 d-flex align-items-center">
-          💠<span class="line flex-grow-1 ml-2"></span>
-        </span>
+        <span class="divider-line flex-grow-1 ml-3"></span>
       </h3>
     <div class="row">
       {% if page_obj %}
@@ -141,9 +137,7 @@
   <div class="container">
       <h3 class="section-title mb-4 d-flex align-items-center">
         Les troupes mises à l honneur
-        <span class="divider-line ml-2 d-flex align-items-center">
-          💠<span class="line flex-grow-1 ml-2"></span>
-        </span>
+        <span class="divider-line flex-grow-1 ml-3"></span>
       </h3>
       <div class="row align-items-center">
       
