--- a/static/css/home.css
+++ b/static/css/home.css
@@ -149,16 +149,9 @@
 }
 
 .divider-line {
-    display: flex;
-    align-items: center;
-  }
-  
-.line {
-    height: 2px;
-    background-color: #DF0962; /* or any color you'd like */
-    display: inline-block;
-    width: 390px;
-  }
+  height: 3px;
+  background-color: #9C0645;
+}
 
 label {
 font-family: 'Afacad';
